--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <ul>
     <li>Nothing going on (yet)</li>
   </ul>
+
   <h2>Navigation</h2>
   <ul>
     <li style="color: #F90">
@@ -21,6 +22,10 @@
     <li style="color: #00F">
       <a href="blue.html">The Blue Page</a>
     </li>
+    <li>
+      <a href="rainbow.html">The Rainbow Page</a>
+    </li>
   </ul>
+
 </body>
 </html>
